# Rag---Document-Analysis

./: .gitignore  README.md
RAG-APP/AI-document analysis/: README.md
RAG-APP/AI-document analysis/backend/: pyproject.toml  pyrightconfig.json  requirements.txt  supabase_setup.sql
RAG-APP/AI-document analysis/backend/app/: config.py  main.py  models.py
RAG-APP/AI-document analysis/backend/app/clients/: __init__.py  s3_client.py  supabase_client.py
RAG-APP/AI-document analysis/backend/app/routers/: chat.py  documents.py  health.py
RAG-APP/AI-document analysis/backend/app/services/: ai_researcher.py  document_parser.py  vector_tools.py
RAG-APP/AI-document analysis/cloudflared/: config.yml
RAG-APP/AI-document analysis/frontend/: package-lock.json  package.json
RAG-APP/AI-document analysis/frontend/app/: globals.css  layout.tsx  page.tsx
RAG-APP/AI-document analysis/frontend/app/components/: ChatBubble.tsx  FormattedMessage.tsx  QAExportPanel.tsx  Sidebar.tsx  SourcesDropdown.tsx  TypewriterMessage.tsx
RAG-APP/AI-document analysis/frontend/app/hooks/: useChat.ts  useLibrary.ts
RAG-APP/AI-document analysis/frontend/app/types/: index.ts
